--- a/sito_originale/sector-area-calculator.html
+++ b/sito_originale/sector-area-calculator.html
@@ -142,7 +142,7 @@
       </div>
       <div id="mobile-menu" class="hidden md:hidden mt-3" role="region" aria-label="Mobile menu">
         <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-        Categories
+<a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
       </div>
     </nav>
   </header>
