--- a/sito_modificato/hp-to-kw-converter.html
+++ b/sito_modificato/hp-to-kw-converter.html
@@ -203,7 +203,7 @@ details[open] > summary { margin-bottom: 0.5rem; }
     <div id="mobile-menu" class="md:hidden mt-4 hidden">
       <div class="space-y-2">
         <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-        Categories
+<a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
       </div>
     </div>
   </nav>
