--- a/sito_modificato/refinance-calculator.html
+++ b/sito_modificato/refinance-calculator.html
@@ -131,7 +131,7 @@
       </div>
       <div id="mobile-menu" class="md:hidden mt-3 hidden">
         <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-        Categories
+<a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
       </div>
     </nav>
   </header>
