--- a/sito_originale/algebra-calculator.html
+++ b/sito_originale/algebra-calculator.html
@@ -152,7 +152,7 @@
       </div>
       <div id="mobile-menu" class="hidden mt-3">
         <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-        Categories
+<a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
       </div>
     </nav>
   </header>
