--- a/sito_originale/closing-costs.html
+++ b/sito_originale/closing-costs.html
@@ -231,7 +231,7 @@
       </div>
       <div class="space-y-2">
         <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-        Categories
+<a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
       </div>
     </div>
   </nav>
