--- a/sito_originale/pension-payout.html
+++ b/sito_originale/pension-payout.html
@@ -142,7 +142,7 @@
     <div id="mobile-menu" class="md:hidden mt-4 hidden">
       <div class="space-y-2">
         <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-        Categories
+<a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
       </div>
     </div>
   </nav>
