--- a/sito_modificato/sphere-volume-calculator.html
+++ b/sito_modificato/sphere-volume-calculator.html
@@ -561,7 +561,7 @@
               <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
               <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
               <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
-              <li><a href="https://calcdomain.com/sitemap" class="text-gray-400 hover:text-white">Site Map</a></li>
+              <li><a href="https://calcdomain.com/sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
             </ul>
           </div>
         </div>
