--- a/sito_modificato/arc-length-calculator.html
+++ b/sito_modificato/arc-length-calculator.html
@@ -523,7 +523,7 @@
             <div class="bg-white p-6 rounded-lg shadow-md">
               <h3 class="text-xl font-semibold mb-4">Related Circle Tools</h3>
               <ul class="space-y-3">
-                <li><a href="/sector-area-calculator" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
+                <li><a href="/sector-area" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
                 <li><a href="/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator (Area, Circumference)</a></li>
                 <li><a href="/central-angle-calculator" class="text-blue-600 hover:underline">Central Angle Calculator</a></li>
                 <li><a href="/degrees-to-radians" class="text-blue-600 hover:underline">Degrees to Radians Converter</a></li>
