--- a/sito_modificato/chord-calculator.html
+++ b/sito_modificato/chord-calculator.html
@@ -315,8 +315,8 @@
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/arc-length-calculator" class="text-blue-600 hover:underline">Arc Length Calculator</a></li>
               <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-              <li><a href="https://calcdomain.com/segment-area-calculator" class="text-blue-600 hover:underline">Circular Segment Area</a></li>
-              <li><a href="https://calcdomain.com/sector-area-calculator" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/segment-area" class="text-blue-600 hover:underline">Circular Segment Area</a></li>
+              <li><a href="https://calcdomain.com/sector-area" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
               <li><a href="https://calcdomain.com/geometry-2d-calculator" class="text-blue-600 hover:underline">2D Geometry</a></li>
             </ul>
           </div>
