--- a/sito_modificato/ellipse-calculator.html
+++ b/sito_modificato/ellipse-calculator.html
@@ -604,7 +604,7 @@
                 <li><a href="/hyperbola-calculator" class="text-blue-600 hover:underline">Hyperbola Calculator</a></li>
                 <li><a href="/parabola-calculator" class="text-blue-600 hover:underline">Parabola Calculator</a></li>
                 <li><a href="/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-                <li><a href="/area-calculator" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
+                <li><a href="/area" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
               </ul>
             </div>
           </div>
