--- a/sito_modificato/herons-formula-calculator.html
+++ b/sito_modificato/herons-formula-calculator.html
@@ -497,7 +497,7 @@
               <h3 class="text-xl font-semibold mb-4">Related Triangle Tools</h3>
               <ul class="space-y-3">
                 <li><a href="/triangle-calculator" class="text-blue-600 hover:underline">Triangle Solver (SSS, SAS, AAS)</a></li>
-                <li><a href="/area-calculator" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
+                <li><a href="/area" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
                 <li><a href="/perimeter-calculator" class="text-blue-600 hover:underline">Perimeter Calculator</a></li>
                 <li><a href="/law-of-cosines-calculator" class="text-blue-600 hover:underline">Law of Cosines Calculator</a></li>
                 <li><a href="/law-of-sines-calculator" class="text-blue-600 hover:underline">Law of Sines Calculator</a></li>
