--- a/sito_modificato/perimeter-calculator.html
+++ b/sito_modificato/perimeter-calculator.html
@@ -615,7 +615,7 @@
             <div class="bg-white p-6 rounded-lg shadow-md">
               <h3 class="text-xl font-semibold mb-4">Related Geometry Tools</h3>
               <ul class="space-y-3">
-                <li><a href="/area-calculator" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
+                <li><a href="/area" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
                 <li><a href="/herons-formula-calculator" class="text-blue-600 hover:underline">Heron's Formula (Area)</a></li>
                 <li><a href="/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator (Circumference)</a></li>
                 <li><a href="/pythagorean-theorem-calculator" class="text-blue-600 hover:underline">Pythagorean Theorem</a></li>
