--- a/sito_modificato/pythagorean-theorem-calculator.html
+++ b/sito_modificato/pythagorean-theorem-calculator.html
@@ -538,7 +538,7 @@
               <ul class="space-y-3">
                 <li><a href="/right-triangle-calculator" class="text-blue-600 hover:underline">Right Triangle Solver (Angles)</a></li>
                 <li><a href="/distance-calculator" class="text-blue-600 hover:underline">Distance Calculator (Coordinates)</a></li>
-                <li><a href="/area-calculator" class="text-blue-600 hover:underline">Area Calculator (Triangle)</a></li>
+                <li><a href="/area" class="text-blue-600 hover:underline">Area Calculator (Triangle)</a></li>
                 <li><a href="/perimeter-calculator" class="text-blue-600 hover:underline">Perimeter Calculator</a></li>
               </ul>
             </div>
