--- a/sito_modificato/regular-ngon-calculator.html
+++ b/sito_modificato/regular-ngon-calculator.html
@@ -619,7 +619,7 @@
                 <li><a href="/pentagon-calculator" class="text-blue-600 hover:underline">Pentagon Calculator</a></li>
                 <li><a href="/hexagon-calculator" class="text-blue-600 hover:underline">Hexagon Calculator</a></li>
                 <li><a href="/octagon-calculator" class="text-blue-600 hover:underline">Octagon Calculator</a></li>
-                <li><a href="/area-calculator" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
+                <li><a href="/area" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
               </ul>
             </div>
           </div>
