--- a/sito_modificato/regular-polygon-calculator.html
+++ b/sito_modificato/regular-polygon-calculator.html
@@ -600,7 +600,7 @@
               <ul class="space-y-3">
                 <li><a href="/regular-ngon-calculator" class="text-blue-600 hover:underline">Regular N-gon Calculator (Alternate)</a></li>
                 <li><a href="/polygon-interior-angles" class="text-blue-600 hover:underline">Polygon Interior Angles</a></li>
-                <li><a href="/area-calculator" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
+                <li><a href="/area" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
                 <li><a href="/perimeter-calculator" class="text-blue-600 hover:underline">Perimeter Calculator</a></li>
                 <li><a href="/irreguar-polygon-calculator" class="text-blue-600 hover:underline">Irregular Polygon Calculator</a></li>
               </ul>
