--- a/sito_modificato/seach.html
+++ b/sito_modificato/seach.html
@@ -298,7 +298,7 @@
                     'auto-loan-calculator',
                     'calorie-calculator',
                     'compound-interest-calculator',
-                    'area-calculator',
+                    'area',
                     'age-calculator'
                 ];
                 
