--- a/sito_modificato/sphere-calculator.html
+++ b/sito_modificato/sphere-calculator.html
@@ -321,7 +321,7 @@
               <li><a href="https://calcdomain.com/cylinder-volume-calculator" class="text-blue-600 hover:underline">Cylinder Volume Calculator</a></li>
               <li><a href="https://calcdomain.com/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator (all solids)</a></li>
               <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator</a></li>
-              <li><a href="https://calcdomain.com/surface-area-calculator" class="text-blue-600 hover:underline">Surface Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/surface-area" class="text-blue-600 hover:underline">Surface Area Calculator</a></li>
               <li><a href="https://calcdomain.com/cone-volume-calculator" class="text-blue-600 hover:underline">Cone Volume Calculator</a></li>
             </ul>
           </div>
