--- a/sito_modificato/sphere-volume-calculator.html
+++ b/sito_modificato/sphere-volume-calculator.html
@@ -519,8 +519,8 @@
                 <li><a href="/cylinder-volume-calculator" class="text-blue-600 hover:underline">Cylinder Volume Calculator</a></li>
                 <li><a href="/cone-volume-calculator" class="text-blue-600 hover:underline">Cone Volume Calculator</a></li>
                 <li><a href="/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator (General)</a></li>
-                <li><a href="/surface-area-calculator" class="text-blue-600 hover:underline">Surface Area Calculator (General)</a></li>
-                <li><a href="/area-calculator" class="text-blue-600 hover:underline">Area Calculator (Circle)</a></li>
+                <li><a href="/surface-area" class="text-blue-600 hover:underline">Surface Area Calculator (General)</a></li>
+                <li><a href="/area" class="text-blue-600 hover:underline">Area Calculator (Circle)</a></li>
               </ul>
             </div>
           </div>
