--- a/sito_modificato/surface-area-calculator.html
+++ b/sito_modificato/surface-area-calculator.html
@@ -6,7 +6,7 @@
     
     <title>Surface Area Calculator (Sphere, Cylinder, Prism, Pyramid) | CalcDomain</title>
     <meta name="description" content="Calculate the Total Surface Area (TSA) and Volume of common 3D shapes: Rectangular Prism, Cylinder, Sphere, and Square Pyramid. Includes formulas and step-by-step solutions.">
-    <link rel="canonical" href="https://calcdomain.com/surface-area-calculator">
+    <link rel="canonical" href="https://calcdomain.com/surface-area">
     
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
