--- a/sito_modificato/triangle-calculator.html
+++ b/sito_modificato/triangle-calculator.html
@@ -563,7 +563,7 @@
           <li><a href="https://calcdomain.com/pythagorean-theorem-calculator" class="text-blue-600 hover:underline">Pythagorean Theorem Calculator</a></li>
           <li><a href="https://calcdomain.com/herons-formula-calculator" class="text-blue-600 hover:underline">Heron's Formula Calculator</a></li>
           <li><a href="https://calcdomain.com/trapezoid-calculator" class="text-blue-600 hover:underline">Trapezoid Calculator</a></li>
-          <li><a href="https://calcdomain.com/area-calculator" class="text-blue-600 hover:underline">Area Calculator</a></li>
+          <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator</a></li>
           <li><a href="https://calcdomain.com/perimeter-calculator" class="text-blue-600 hover:underline">Perimeter Calculator</a></li>
         </ul>
       </div>
