--- a/sito_modificato/volume-calculator.html
+++ b/sito_modificato/volume-calculator.html
@@ -378,9 +378,9 @@
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/solid-geometry-calculator" class="text-blue-600 hover:underline">Solid Geometry Calculator</a></li>
               <li><a href="https://calcdomain.com/pyramid-calculator" class="text-blue-600 hover:underline">Pyramid Calculator</a></li>
-              <li><a href="https://calcdomain.com/sector-area-calculator" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/sector-area" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
               <li><a href="https://calcdomain.com/hexagon-calculator" class="text-blue-600 hover:underline">Hexagon Calculator</a></li>
-              <li><a href="https://calcdomain.com/rectangle-area-calculator" class="text-blue-600 hover:underline">Rectangle Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/rectangle-area" class="text-blue-600 hover:underline">Rectangle Area Calculator</a></li>
             </ul>
           </div>
           <div class="bg-white p-4 rounded-lg shadow-md">
