--- a/sito_originale/area.html
+++ b/sito_originale/area.html
@@ -115,7 +115,7 @@
   "@type": "WebPage",
   "name": "Area Calculator",
   "description": "Compute the area of common shapes—rectangle, circle, triangle, trapezoid, parallelogram, and regular polygons—with step-by-step formulas and unit conversions.",
-  "url": "https://calcdomain.com/area-calculator",
+  "url": "https://calcdomain.com/area",
   "inLanguage": "en",
   "author": {
     "@type": "Person",
@@ -515,7 +515,7 @@
         <h2 class="text-xl font-semibold text-gray-900 mb-4">Related Geometry Tools</h2>
         <ul class="space-y-2 text-sm text-blue-600">
           <li><a class="hover:underline" href="https://calcdomain.com/volume-calculator">Volume Calculator</a></li>
-          <li><a class="hover:underline" href="https://calcdomain.com/rectangle-area-calculator">Rectangle Area Calculator</a></li>
+          <li><a class="hover:underline" href="https://calcdomain.com/rectangle-area">Rectangle Area Calculator</a></li>
           <li><a class="hover:underline" href="https://calcdomain.com/triangle-calculator">Triangle Solver</a></li>
           <li><a class="hover:underline" href="https://calcdomain.com/circle-calculator">Circle Calculator</a></li>
           <li><a class="hover:underline" href="https://calcdomain.com/midpoint-calculator">Midpoint Calculator</a></li>
