--- a/sito_originale/rectangle-area-calculator.html
+++ b/sito_originale/rectangle-area-calculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://calcdomain.com/rectangle-area-calculator">
+<link rel="canonical" href="https://calcdomain.com/rectangle-area">
 
 
 
@@ -65,7 +65,7 @@
     "@type":"WebPage",
     "name":"Rectangle Area Calculator",
     "description":"Compute the area of a rectangle with unit conversions (m, cm, mm, in, ft), plus perimeter and diagonal. Includes formula, worked example, and FAQs.",
-    "url":"https://calcdomain.com/rectangle-area-calculator",
+    "url":"https://calcdomain.com/rectangle-area",
     "inLanguage":"en",
     "author":{"@type":"Person","name":"Ugo Candido"},
     "publisher":{"@type":"Organization","name":"CalcDomain"}
@@ -99,7 +99,7 @@
       "@type": "ListItem",
       "position": 4,
       "name": "Rectangle Area Calculator",
-      "item": "https://calcdomain.com/rectangle-area-calculator"
+      "item": "https://calcdomain.com/rectangle-area"
     }
   ]
 }</script>
@@ -115,7 +115,7 @@
     "offers": {"@type":"Offer","price":"0","priceCurrency":"USD"},
     "author":{"@type":"Person","name":"Ugo Candido"},
     "publisher":{"@type":"Organization","name":"CalcDomain"},
-    "url":"https://calcdomain.com/rectangle-area-calculator"
+    "url":"https://calcdomain.com/rectangle-area"
   }
   </script>
 
