--- a/sito_originale/surface-area-calculator.html
+++ b/sito_originale/surface-area-calculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://calcdomain.com/surface-area-calculator">
+<link rel="canonical" href="https://calcdomain.com/surface-area">
 
 
 
@@ -59,7 +59,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "Surface Area Calculator",
-    "url": "https://calcdomain.com/surface-area-calculator",
+    "url": "https://calcdomain.com/surface-area",
     "inLanguage": "en",
     "description": "Compute surface area for multiple 3D solids with formulas, steps, and examples.",
     "author": { "@type": "Person", "name": "Ugo Candido" },
@@ -92,7 +92,7 @@
       "@type": "ListItem",
       "position": 4,
       "name": "Surface Area Calculator",
-      "item": "https://calcdomain.com/surface-area-calculator"
+      "item": "https://calcdomain.com/surface-area"
     }
   ]
 }</script>
