--- a/sito_modificato/area.html
+++ b/sito_modificato/area.html
@@ -170,7 +170,7 @@
               <p class="text-gray-600">Calculate the area of the most common 2D shapes in one place. Choose the shape, enter the dimensions, pick the unit, and get the area with formula steps.</p>
             </header>
 
-            <section id="area-calculator" class="mb-8">
+            <section id="area" class="mb-8">
               <div class="grid gap-4 md:grid-cols-2">
                 <div>
                   <label for="shape" class="block text-sm font-medium text-gray-700 mb-1">Shape</label>
@@ -320,11 +320,11 @@
             <h2 class="text-lg font-semibold mb-4">Related Math &amp; Conversions tools</h2>
             <ul class="space-y-2">
               <li><a href="https://calcdomain.com/perimeter-calculator" class="text-blue-600 hover:underline">Perimeter Calculator</a></li>
-              <li><a href="https://calcdomain.com/surface-area-calculator" class="text-blue-600 hover:underline">Surface Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/surface-area" class="text-blue-600 hover:underline">Surface Area Calculator</a></li>
               <li><a href="https://calcdomain.com/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator</a></li>
               <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
               <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-              <li><a href="https://calcdomain.com/rectangle-area-calculator" class="text-blue-600 hover:underline">Rectangle Area</a></li>
+              <li><a href="https://calcdomain.com/rectangle-area" class="text-blue-600 hover:underline">Rectangle Area</a></li>
             </ul>
           </div>
 
