--- a/sito_modificato/cone-volume-calculator.html
+++ b/sito_modificato/cone-volume-calculator.html
@@ -529,7 +529,7 @@
                 <li><a href="/cylinder-volume-calculator" class="text-blue-600 hover:underline">Cylinder Volume Calculator</a></li>
                 <li><a href="/sphere-volume-calculator" class="text-blue-600 hover:underline">Sphere Volume Calculator</a></li>
                 <li><a href="/solid-geometry-calculator" class="text-blue-600 hover:underline">Solid Geometry Calculator (All Shapes)</a></li>
-                <li><a href="/area-calculator" class="text-blue-600 hover:underline">Area Calculator (Base)</a></li>
+                <li><a href="/area" class="text-blue-600 hover:underline">Area Calculator (Base)</a></li>
                 <li><a href="/pythagorean-theorem-calculator" class="text-blue-600 hover:underline">Pythagorean Theorem Calculator</a></li>
               </ul>
             </div>
