--- a/sito_modificato/hexagon-calculator.html
+++ b/sito_modificato/hexagon-calculator.html
@@ -314,7 +314,7 @@
               <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
               <li><a href="https://calcdomain.com/polygon-calculator" class="text-blue-600 hover:underline">Polygon Calculator</a></li>
               <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-              <li><a href="https://calcdomain.com/area-calculator" class="text-blue-600 hover:underline">Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator</a></li>
               <li><a href="https://calcdomain.com/geometry-2d-calculator" class="text-blue-600 hover:underline">2D Geometry</a></li>
             </ul>
           </div>
