--- a/sito_modificato/irregular-polygon-calculator.html
+++ b/sito_modificato/irregular-polygon-calculator.html
@@ -277,7 +277,7 @@
               <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
               <li><a href="https://calcdomain.com/hexagon-calculator" class="text-blue-600 hover:underline">Hexagon Calculator</a></li>
               <li><a href="https://calcdomain.com/geometry-2d-calculator" class="text-blue-600 hover:underline">2D Geometry</a></li>
-              <li><a href="https://calcdomain.com/area-calculator" class="text-blue-600 hover:underline">Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator</a></li>
             </ul>
           </div>
           <div class="bg-white p-4 rounded-lg shadow-md">
