--- a/sito_modificato/isosceles-triangle-calculator.html
+++ b/sito_modificato/isosceles-triangle-calculator.html
@@ -523,9 +523,9 @@ input[readonly] { background-color: #f9fafb; color: #1d4ed8; font-weight: 600; b
                         <ul class="space-y-2 text-sm text-gray-700">
                         <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
                         <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-                        <li><a href="https://calcdomain.com/area-calculator" class="text-blue-600 hover:underline">Area Calculator – Compute Area of Common Shapes (with Steps & Formulas)</a></li>
+                        <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator – Compute Area of Common Shapes (with Steps & Formulas)</a></li>
                         <li><a href="https://calcdomain.com/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator</a></li>
-                        <li><a href="https://calcdomain.com/surface-area-calculator" class="text-blue-600 hover:underline">Surface Area Calculator — Formulas, Steps, and Examples</a></li>
+                        <li><a href="https://calcdomain.com/surface-area" class="text-blue-600 hover:underline">Surface Area Calculator — Formulas, Steps, and Examples</a></li>
                         </ul>
                     </div>
                 </div>
