--- a/sito_modificato/parallelogram-calculator.html
+++ b/sito_modificato/parallelogram-calculator.html
@@ -297,11 +297,11 @@
           <div class="bg-white p-4 rounded-lg shadow-md mb-6">
             <h2 class="text-lg font-semibold mb-3">Related geometry tools</h2>
             <ul class="space-y-2 text-sm">
-              <li><a href="https://calcdomain.com/rectangle-area-calculator" class="text-blue-600 hover:underline">Rectangle Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/rectangle-area" class="text-blue-600 hover:underline">Rectangle Area Calculator</a></li>
               <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
               <li><a href="https://calcdomain.com/irregular-polygon-calculator" class="text-blue-600 hover:underline">Irregular Polygon</a></li>
               <li><a href="https://calcdomain.com/hexagon-calculator" class="text-blue-600 hover:underline">Hexagon Calculator</a></li>
-              <li><a href="https://calcdomain.com/area-calculator" class="text-blue-600 hover:underline">Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator</a></li>
             </ul>
           </div>
           <div class="bg-white p-4 rounded-lg shadow-md">
