--- a/sito_modificato/pentagon-calculator.html
+++ b/sito_modificato/pentagon-calculator.html
@@ -406,7 +406,7 @@
           <li><a href="https://calcdomain.com/octagon-calculator" class="text-blue-600 hover:underline">Octagon Calculator</a></li>
           <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
           <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-          <li><a href="https://calcdomain.com/area-calculator" class="text-blue-600 hover:underline">Area Calculator</a></li>
+          <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator</a></li>
           <li><a href="https://calcdomain.com/perimeter-calculator" class="text-blue-600 hover:underline">Perimeter Calculator</a></li>
           <li><a href="https://calcdomain.com/solid-geometry-calculator" class="text-blue-600 hover:underline">Solid Geometry Calculator</a></li>
         </ul>
