--- a/sito_originale/area-calculator.html
+++ b/sito_originale/area-calculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://calcdomain.com/area-calculator">
+<link rel="canonical" href="https://calcdomain.com/area">
 
 
 
@@ -67,7 +67,7 @@
     "@type":"WebPage",
     "name":"Area Calculator",
     "inLanguage":"en",
-    "url":"https://calcdomain.com/area-calculator",
+    "url":"https://calcdomain.com/area",
     "description":"Compute areas for rectangles, triangles, circles, trapezoids, sectors, and ellipses with LaTeX formulas, unit conversions, and step-by-step example.",
     "author":{"@type":"Person","name":"Ugo Candido"},
     "publisher":{"@type":"Organization","name":"CalcDomain"}
@@ -82,7 +82,7 @@
     "operatingSystem":"All",
     "creator":{"@type":"Person","name":"Ugo Candido"},
     "offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},
-    "url":"https://calcdomain.com/area-calculator"
+    "url":"https://calcdomain.com/area"
   }
   </script>
   <script type="application/ld+json">{
@@ -111,7 +111,7 @@
       "@type": "ListItem",
       "position": 4,
       "name": "Area Calculator",
-      "item": "https://calcdomain.com/area-calculator"
+      "item": "https://calcdomain.com/area"
     }
   ]
 }</script>
@@ -393,7 +393,7 @@
               <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/perimeter-calculator">Perimeter Calculator</a></li>
               <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/triangle-calculator">Triangle Calculator</a></li>
               <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/circle-calculator">Circle Calculator</a></li>
-              <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/surface-area-calculator">Surface Area (3D)</a></li>
+              <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/surface-area">Surface Area (3D)</a></li>
             </ul>
           </div>
         </div>
