--- a/sito_originale/irregular-polygon-calculator.html
+++ b/sito_originale/irregular-polygon-calculator.html
@@ -437,7 +437,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="font-bold text-lg mb-4">Related Geometry Tools</h3>
                         <ul class="space-y-3 text-sm">
-                            <li><a href="https://calcdomain.com/area-calculator" class="text-blue-600 hover:underline">Area Calculator</a></li>
+                            <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator</a></li>
                             <li>Triangle Area Calculator</li>
                             <li>Coordinate Distance Calculator</li>
                             <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
