--- a/sito_originale/regular-polygon-area.html
+++ b/sito_originale/regular-polygon-area.html
@@ -432,9 +432,9 @@
                         <ul class="space-y-2 text-sm text-gray-700">
                         <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
                         <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-                        <li><a href="https://calcdomain.com/area-calculator" class="text-blue-600 hover:underline">Area Calculator – Compute Area of Common Shapes (with Steps & Formulas)</a></li>
+                        <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator – Compute Area of Common Shapes (with Steps & Formulas)</a></li>
                         <li><a href="https://calcdomain.com/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator</a></li>
-                        <li><a href="https://calcdomain.com/surface-area-calculator" class="text-blue-600 hover:underline">Surface Area Calculator — Formulas, Steps, and Examples</a></li>
+                        <li><a href="https://calcdomain.com/surface-area" class="text-blue-600 hover:underline">Surface Area Calculator — Formulas, Steps, and Examples</a></li>
                         </ul>
                     </div>
                 </div>
