--- a/sito_originale/search.html
+++ b/sito_originale/search.html
@@ -249,7 +249,7 @@
                     'auto-loan-calculator',
                     'calorie-calculator',
                     'compound-interest-calculator',
-                    'area-calculator',
+                    'area',
                     'age-calculator'
                 ];
                 
