--- a/sito_modificato/scalene-triangle-calculator.html
+++ b/sito_modificato/scalene-triangle-calculator.html
@@ -69,7 +69,7 @@ fontCache: 'global'
     {
       "@type": "ListItem",
       "position": 3,
-      "name": "Geometry",
+      "name": "subcategories/geometry",
       "item": "https://calcdomain.com/subcategories/geometry"
     },
     {
@@ -379,7 +379,7 @@ fieldset:disabled { opacity: 0.5; }
                     <p>This calculator uses standard trigonometric and geometric principles for its calculations. All results are derived from foundational mathematical laws, ensuring precision and reliability.</p>
                     <ul>
                     <li><strong>AuthoritativeDataSource:</strong> <a href="https://en.wikipedia.org/wiki/Law_of_cosines" target="_blank" rel="noopener">Law of Cosines</a>, <a href="https://en.wikipedia.org/wiki/Law_of_sines" target="_blank" rel="noopener">Law of Sines</a>, and <a href="https://en.wikipedia.org/wiki/Heron%27s_formula" target="_blank" rel="noopener">Heron's Formula</a>.</li>
-                    <li><strong>Reference:</strong> These are foundational principles of trigonometry and geometry, universally accepted and taught in standard mathematics curricula. See, for example, "Geometry" (Moise & Downs, 1991) or any standard university-level trigonometry text.</li>
+                    <li><strong>Reference:</strong> These are foundational principles of trigonometry and geometry, universally accepted and taught in standard mathematics curricula. See, for example, "subcategories/geometry" (Moise & Downs, 1991) or any standard university-level trigonometry text.</li>
                     </ul>
                     <p>All calculations are based strictly on these mathematical laws. Angles are returned in degrees.</p>
 
