--- a/sito_modificato/spring-rate.html
+++ b/sito_modificato/spring-rate.html
@@ -305,7 +305,7 @@
 <legend class="sr-only">Choose calculator mode</legend>
 <div aria-label="Mode" class="radio-group" role="radiogroup">
 <div class="radio-option">
-<input checked="" id="mode-geometry" name="mode" type="radio" value="geometry">
+<input checked="" id="mode-geometry" name="mode" type="radio" value="subcategories/geometry">
 <label for="mode-geometry">Coil rate from geometry</label>
 </div>
 <div class="radio-option">
