--- a/sito_originale/chord-calculator.html
+++ b/sito_originale/chord-calculator.html
@@ -43,7 +43,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com"},
       {"@type":"ListItem","position":2,"name":"Math","item":"https://calcdomain.com/math"},
-      {"@type":"ListItem","position":3,"name":"Geometry","item":"https://calcdomain.com/subcategories/geometry"},
+      {"@type":"ListItem","position":3,"name":"subcategories/geometry","item":"https://calcdomain.com/subcategories/geometry"},
       {"@type":"ListItem","position":4,"name":"Chord Length Calculator","item":"https://calcdomain.com/chord-calculator"}
     ]
   }
