--- a/sito_originale/cylinder-volume-calculator.html
+++ b/sito_originale/cylinder-volume-calculator.html
@@ -151,7 +151,7 @@ body * { visibility: hidden; }
     {
       "@type": "ListItem",
       "position": 3,
-      "name": "Geometry",
+      "name": "subcategories/geometry",
       "item": "https://calcdomain.com/subcategories/geometry"
     },
     {
