--- a/sito_originale/distance-calculator.html
+++ b/sito_originale/distance-calculator.html
@@ -79,7 +79,7 @@
     "url":"https://calcdomain.com/distance-calculator",
     "offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},
     "author":{"@type":"Person","name":"Ugo Candido"},
-    "about":["Geometry","Geodesy","Great-circle distance","Haversine","Euclidean distance"]
+    "about":["subcategories/geometry","Geodesy","Great-circle distance","Haversine","Euclidean distance"]
   }
   </script>
   <script type="application/ld+json">
@@ -114,7 +114,7 @@
     {
       "@type": "ListItem",
       "position": 3,
-      "name": "Geometry",
+      "name": "subcategories/geometry",
       "item": "https://calcdomain.com/subcategories/geometry"
     },
     {
