--- a/sito_modificato/equilateral-triangle-calculator.html
+++ b/sito_modificato/equilateral-triangle-calculator.html
@@ -108,7 +108,7 @@ MathJax = {
         {
           "@type": "ListItem",
           "position": 3,
-          "name": "Geometry",
+          "name": "subcategories/geometry",
           "item": "https://calcdomain.com/subcategories/geometry"
         },
         {
