--- a/sito_modificato/isosceles-triangle-calculator.html
+++ b/sito_modificato/isosceles-triangle-calculator.html
@@ -68,7 +68,7 @@ MathJax = {
       "itemListElement": [
         { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com" },
         { "@type": "ListItem", "position": 2, "name": "Math", "item": "https://calcdomain.com" },
-        { "@type": "ListItem", "position": 3, "name": "Geometry", "item": "https://calcdomain.com" },
+        { "@type": "ListItem", "position": 3, "name": "subcategories/geometry", "item": "https://calcdomain.com" },
         { "@type": "ListItem", "position": 4, "name": "Isosceles Triangle Calculator", "item": "https://calcdomain.com/isosceles-triangle-calculator" }
       ]
     }
