--- a/sito_modificato/nonagon-calculator.html
+++ b/sito_modificato/nonagon-calculator.html
@@ -103,7 +103,7 @@ MathJax = {
         {
           "@type": "ListItem",
           "position": 3,
-          "name": "Geometry",
+          "name": "subcategories/geometry",
           "item": "https://calcdomain.com/subcategories/geometry"
         },
         {
