--- a/sito_modificato/triangle-calculator.html
+++ b/sito_modificato/triangle-calculator.html
@@ -82,7 +82,7 @@
       {
         "@type": "ListItem",
         "position": 3,
-        "name": "Geometry",
+        "name": "subcategories/geometry",
         "item": "https://calcdomain.com/geometry"
       }
     ]
