--- a/sito_originale/cone-volume-calculator.html
+++ b/sito_originale/cone-volume-calculator.html
@@ -97,7 +97,7 @@
     {
       "@type": "ListItem",
       "position": 3,
-      "name": "Geometry",
+      "name": "subcategories/geometry",
       "item": "https://calcdomain.com/subcategories/geometry"
     },
     {
