--- a/sito_originale/kite-calculator.html
+++ b/sito_originale/kite-calculator.html
@@ -126,7 +126,7 @@ MathJax = {
         {
           "@type": "ListItem",
           "position": 3,
-          "name": "Geometry",
+          "name": "subcategories/geometry",
           "item": "https://calcdomain.com/subcategories/geometry"
         },
         {
@@ -438,7 +438,7 @@ body * { visibility: hidden; }
                                                                                                                                                                 <div>
                                                                                                                                                                 <label for="calcMode" class="block text-sm font-medium text-gray-700 mb-1">Calculator Type</label>
                                                                                                                                                                 <select id="calcMode" class="select-field mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
-                                                                                                                                                                <option value="geometry" selected>Geometry (Area & Perimeter)</option>
+                                                                                                                                                                <option value="subcategories/geometry" selected>Geometry (Area & Perimeter)</option>
                                                                                                                                                                 <option value="kitesurf">Kitesurfing Kite Size</option>
                                                                                                                                                                 </select>
                                                                                                                                                                 </div>
