--- a/sito_originale/midpoint-calculator.html
+++ b/sito_originale/midpoint-calculator.html
@@ -69,7 +69,7 @@
         "url": "https://calcdomain.com/midpoint-calculator",
         "description": "Compute midpoint, distance, slope, and line equation from two points in 2D or 3D.",
         "isPartOf": { "@type": "WebSite", "name": "CalcDomain", "url": "https://calcdomain.com" },
-        "about": [{ "@type":"Thing", "name":"Geometry" }, { "@type":"Thing", "name":"Analytic Geometry" }],
+        "about": [{ "@type":"Thing", "name":"subcategories/geometry" }, { "@type":"Thing", "name":"Analytic Geometry" }],
         "author": { "@type":"Person", "name":"Ugo Candido" },
         "dateModified": "2025-10-25"
       },
@@ -87,7 +87,7 @@
         "itemListElement": [
           { "@type":"ListItem", "position":1, "name":"Home", "item":"https://calcdomain.com" },
           { "@type":"ListItem", "position":2, "name":"Math", "item":"https://calcdomain.com/math" },
-          { "@type":"ListItem", "position":3, "name":"Geometry", "item":"https://calcdomain.com/subcategories/geometry" },
+          { "@type":"ListItem", "position":3, "name":"subcategories/geometry", "item":"https://calcdomain.com/subcategories/geometry" },
           { "@type":"ListItem", "position":4, "name":"Midpoint Calculator", "item":"https://calcdomain.com/midpoint-calculator" }
         ]
       },
