--- a/sito_originale/regular-polygon-calculator.html
+++ b/sito_originale/regular-polygon-calculator.html
@@ -95,7 +95,7 @@
     {
       "@type": "ListItem",
       "position": 3,
-      "name": "Geometry",
+      "name": "subcategories/geometry",
       "item": "https://calcdomain.com/subcategories/geometry"
     },
     {
