--- a/sito_originale/triangle-calculator.html
+++ b/sito_originale/triangle-calculator.html
@@ -80,7 +80,7 @@
     {
       "@type": "ListItem",
       "position": 3,
-      "name": "Geometry",
+      "name": "subcategories/geometry",
       "item": "https://calcdomain.com/subcategories/geometry"
     },
     {
