--- a/sito_modificato/central-angle-calculator.html
+++ b/sito_modificato/central-angle-calculator.html
@@ -226,8 +226,8 @@
                   <input id="sector-radius" type="number" value="10" step="0.01" class="w-full border-gray-300 rounded-md">
                 </div>
                 <div>
-                  <label class="block label-sm text-gray-700 mb-1" for="sector-area">Sector area (A)</label>
-                  <input id="sector-area" type="number" value="50" step="0.01" class="w-full border-gray-300 rounded-md">
+                  <label class="block label-sm text-gray-700 mb-1" for="sector-area-calculator">Sector area (A)</label>
+                  <input id="sector-area-calculator" type="number" value="50" step="0.01" class="w-full border-gray-300 rounded-md">
                 </div>
                 <div class="flex items-end">
                   <p class="text-xs text-gray-500">A = ½ r² θ → θ = 2A / r²</p>
@@ -315,7 +315,7 @@
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/chord-calculator" class="text-blue-600 hover:underline">Chord Length Calculator</a></li>
               <li><a href="https://calcdomain.com/arc-length-calculator" class="text-blue-600 hover:underline">Arc Length Calculator</a></li>
-              <li><a href="https://calcdomain.com/sector-area" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/sector-area-calculator" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
               <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
               <li><a href="https://calcdomain.com/geometry-2d-calculator" class="text-blue-600 hover:underline">2D Geometry</a></li>
             </ul>
