--- a/sito_modificato/circle-calculator.html
+++ b/sito_modificato/circle-calculator.html
@@ -644,7 +644,7 @@
                 <li><a href="/ellipse-calculator" class="text-blue-600 hover:underline">Ellipse Calculator</a></li>
                 <li><a href="/area" class="text-blue-600 hover:underline">Area Calculator (General)</a></li>
                 <li><a href="/arc-length-calculator" class="text-blue-600 hover:underline">Arc Length Calculator</a></li>
-                <li><a href="/sector-area" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
+                <li><a href="/sector-area-calculator" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
                 <li><a href="/distance-formula-calculator" class="text-blue-600 hover:underline">Distance Formula Calculator</a></li>
               </ul>
             </div>
