--- a/sito_modificato/parabola-calculator.html
+++ b/sito_modificato/parabola-calculator.html
@@ -341,7 +341,7 @@
               <li><a href="https://calcdomain.com/graphing-calculator" class="text-blue-600 hover:underline">Graphing Calculator</a></li>
               <li><a href="https://calcdomain.com/distance-formula-calculator" class="text-blue-600 hover:underline">Distance Formula</a></li>
               <li><a href="https://calcdomain.com/central-angle-calculator" class="text-blue-600 hover:underline">Central Angle</a></li>
-              <li><a href="https://calcdomain.com/sector-area" class="text-blue-600 hover:underline">Sector Area</a></li>
+              <li><a href="https://calcdomain.com/sector-area-calculator" class="text-blue-600 hover:underline">Sector Area</a></li>
             </ul>
           </div>
           <div class="bg-white p-4 rounded-lg shadow-md">
