--- a/sito_modificato/segment-calculator.html
+++ b/sito_modificato/segment-calculator.html
@@ -299,7 +299,7 @@
             <h2 class="text-lg font-semibold mb-3">Related geometry tools</h2>
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-              <li><a href="https://calcdomain.com/sector-area" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/sector-area-calculator" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
               <li><a href="https://calcdomain.com/chord-calculator" class="text-blue-600 hover:underline">Chord Calculator</a></li>
               <li><a href="https://calcdomain.com/central-angle-calculator" class="text-blue-600 hover:underline">Central Angle Calculator</a></li>
               <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator (All Shapes)</a></li>
