--- a/sito_originale/sector-area-calculator.html
+++ b/sito_originale/sector-area-calculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://calcdomain.com/sector-area">
+<link rel="canonical" href="https://calcdomain.com/sector-area-calculator">
 
 
 
@@ -69,7 +69,7 @@
     "@type":"WebPage",
     "name":"Sector Area Calculator",
     "description":"Compute sector area from radius and angle (degrees or radians) or from arc length; see arc length, perimeter, and circle fraction with an interactive diagram.",
-    "url":"https://calcdomain.com/sector-area",
+    "url":"https://calcdomain.com/sector-area-calculator",
     "inLanguage":"en",
     "author":{"@type":"Person","name":"Ugo Candido"},
     "publisher":{"@type":"Organization","name":"CalcDomain"}
@@ -103,7 +103,7 @@
       "@type": "ListItem",
       "position": 4,
       "name": "Sector Area Calculator",
-      "item": "https://calcdomain.com/sector-area"
+      "item": "https://calcdomain.com/sector-area-calculator"
     }
   ]
 }</script>
