--- a/sito_modificato/area.html
+++ b/sito_modificato/area.html
@@ -324,7 +324,7 @@
               <li><a href="https://calcdomain.com/volume-calculator" class="text-blue-600 hover:underline">Volume Calculator</a></li>
               <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
               <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-              <li><a href="https://calcdomain.com/rectangle-area" class="text-blue-600 hover:underline">Rectangle Area</a></li>
+              <li><a href="https://calcdomain.com/rectangle-area-calculator" class="text-blue-600 hover:underline">Rectangle Area</a></li>
             </ul>
           </div>
 
