--- a/sito_modificato/rectangle-area-calculator.html
+++ b/sito_modificato/rectangle-area-calculator.html
@@ -6,7 +6,7 @@
 
     <title>Rectangle Area Calculator: Length, Width, Perimeter & Diagonal | CalcDomain</title>
     <meta name="description" content="Free rectangle area calculator. Enter length and width, or work backwards from perimeter or diagonal to find area, perimeter, diagonal, aspect ratio and optional cost. Includes formulas and FAQs.">
-    <link rel="canonical" href="https://calcdomain.com/rectangle-area">
+    <link rel="canonical" href="https://calcdomain.com/rectangle-area-calculator">
 
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -61,7 +61,7 @@
           "itemListElement": [
             { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com/" },
             { "@type": "ListItem", "position": 2, "name": "Math & Conversions", "item": "https://calcdomain.com/math-conversions" },
-            { "@type": "ListItem", "position": 3, "name": "Rectangle Area Calculator", "item": "https://calcdomain.com/rectangle-area" }
+            { "@type": "ListItem", "position": 3, "name": "Rectangle Area Calculator", "item": "https://calcdomain.com/rectangle-area-calculator" }
           ]
         },
         {
@@ -323,7 +323,7 @@
               <li><a href="https://calcdomain.com/area" class="text-blue-600 hover:underline">Area Calculator (All Shapes)</a></li>
               <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
               <li><a href="https://calcdomain.com/irregular-polygon-calculator" class="text-blue-600 hover:underline">Irregular Polygon</a></li>
-              <li><a href="https://calcdomain.com/sector-area" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/sector-area-calculator" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
             </ul>
           </div>
           <div class="bg-white p-4 rounded-lg shadow-md">
