--- a/sito_modificato/sector-area-calculator.html
+++ b/sito_modificato/sector-area-calculator.html
@@ -6,7 +6,7 @@
 
     <title>Sector Area Calculator: Area, Arc Length, Perimeter from Radius & Angle | CalcDomain</title>
     <meta name="description" content="Sector area calculator that finds the area of a circle sector, arc length, central angle in degrees or radians, and sector perimeter. Supports radius + angle, diameter + angle, arc length + radius, and percentage of circle.">
-    <link rel="canonical" href="https://calcdomain.com/sector-area">
+    <link rel="canonical" href="https://calcdomain.com/sector-area-calculator">
 
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -61,7 +61,7 @@
           "itemListElement": [
             { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://calcdomain.com/" },
             { "@type": "ListItem", "position": 2, "name": "Math & Conversions", "item": "https://calcdomain.com/math-conversions" },
-            { "@type": "ListItem", "position": 3, "name": "Sector Area Calculator", "item": "https://calcdomain.com/sector-area" }
+            { "@type": "ListItem", "position": 3, "name": "Sector Area Calculator", "item": "https://calcdomain.com/sector-area-calculator" }
           ]
         },
         {
