--- a/sito_originale/central-angle-calculator.html
+++ b/sito_originale/central-angle-calculator.html
@@ -386,7 +386,7 @@
             <h3 class="font-bold text-lg mb-3">Related geometry tools</h3>
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/arc-length-calculator" class="text-blue-600 hover:underline">Arc Length Calculator</a></li>
-              <li><a href="https://calcdomain.com/sector-area" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/sector-area-calculator" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
               <li><a href="https://calcdomain.com/chord-calculator" class="text-blue-600 hover:underline">Chord Length Calculator</a></li>
               <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
             </ul>chord-
