--- a/sito_originale/chord-calculator.html
+++ b/sito_originale/chord-calculator.html
@@ -394,7 +394,7 @@
               <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/arc-length-calculator">Arc Length Calculator</a></li>
               <li>Circular Segment Calculator</li>
               <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/circle-calculator">Circle Calculator</a></li>
-              <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/sector-area">Sector Area Calculator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/sector-area-calculator">Sector Area Calculator</a></li>
             </ul>
           </div>
         </div>
