--- a/sito_originale/construction.html
+++ b/sito_originale/construction.html
@@ -76,7 +76,7 @@
           <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"></circle></svg></span>
           <div><h3 class="font-semibold text-gray-800">Rebar Calculator</h3><span class="text-sm text-gray-600">Estimate rebar length/weight for slabs, beams, or decks.</span></div>
         </a>
-        <a href="https://calcdomain.com/rectangle-area" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
+        <a href="https://calcdomain.com/rectangle-area-calculator" class="bg-white p-4 rounded-lg border shadow-sm hover:shadow-lg transition flex items-center gap-4">
           <span class="inline-flex items-center justify-center bg-blue-100 rounded-full h-10 w-10"><svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" viewBox="0 0 24 24"><rect x="4" y="4" width="16" height="16" rx="2"></rect></svg></span>
           <div><h3 class="font-semibold text-gray-800">Area Calculator</h3><span class="text-sm text-gray-600">Room, slab, or tile layout made easy.</span></div>
         </a>
